<resources>
    <string name="app_name">Trashbin Cloud</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Dashboard</string>
    <string name="second_fragment_label">Second Fragment Second Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  LOGIN  -->
    <string name="login">Login</string>
    <string name="login_details">Enter your email and password</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_question">Don\'t have an account?</string>
    <string name="register">Register</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>

    <string name="history_title">History</string>
    <string name="weekly_activity">Weekly Activity</string>
    <string name="recent_activity">Recent Activity</string>

    <string name="filter_all_events">All Events</string>
    <string name="filter_auto_open">Auto Open</string>
    <string name="filter_manual_open">Manual Open</string>

    <string name="activity_auto_open">Auto Open</string>
    <string name="activity_manual_open">Manual Open</string>
    <string name="activity_bin_full">Bin Full Alert</string>
    <string name="activity_hold_mode">Hold Mode</string>

    <string name="detail_motion_detected">Motion detected</string>
    <string name="detail_touch_activated">Touch sensor activated</string>
    <string name="detail_action_required">Action required</string>
    <string name="detail_extended_use">Extended use</string>

    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>

    <string name="bin_kitchen">Kitchen Bin</string>
    <string name="bin_living_room">Living Room Bin</string>
    <string name="bin_bedroom">Bedroom Bin</string>
    <string name="bin_bathroom">Bathroom Bin</string>

    <string name="date_placeholder">mm/dd/yyyy</string>

    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="day_sunday">Sun</string>

    <string name="kitchen_bin">Kitchen Bin</string>
    <string name="location_main_kitchen">Main Kitchen, Floor 2</string>
    <string name="fill_percentage">80% Full</string>
    <string name="percentage_80">80%</string>

    <string name="alert_nearly_full">Bin is nearly full - requires attention</string>

    <string name="fill_level">Fill Level</string>
    <string name="remote_control">Remote Control</string>
    <string name="smart_insights">Smart Insights</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hold">Hold</string>

    <string name="legend_0_50">0-50%</string>
    <string name="legend_51_75">51-75%</string>
    <string name="legend_76_100">76-100%</string>

    <string name="days_to_fill">2.5</string>
    <string name="days_to_fill_label">Days to fill</string>
    <string name="last_emptied_date">Sep 18</string>
    <string name="last_emptied_label">Last emptied</string>

    <string name="activity_motion_detected">Motion detected</string>
    <string name="activity_time_1">Today 3:45 PM</string>

    <string name="activity_bin_full_alert">Bin Full Alert</string>
    <string name="activity_capacity_reached">80% capacity reached</string>
    <string name="activity_time_2">Sep 20, 8:00 AM</string>

    <string name="activity_manual_close">Manual Close</string>
    <string name="activity_user_action">User action</string>
    <string name="activity_time_3">Sep 19, 2:30 PM</string>

    <string name="activity_bin_emptied">Bin Emptied</string>
    <string name="activity_maintenance_completed">Maintenance completed</string>
    <string name="activity_time_4">Sep 18, 10:15 AM</string>

    <string name="cd_location_icon">Location icon</string>
    <string name="cd_alert_icon">Alert icon</string>
    <string name="cd_open_icon">Open bin icon</string>
    <string name="cd_close_icon">Close bin icon</string>
    <string name="cd_hold_icon">Hold bin icon</string>
    <string name="cd_activity_status">Activity status indicator</string>

    <string name="back">Back</string>
    <string name="bin_details">Bin Details</string>
    <string name="more_options">More options</string>

    <string name="user_guide">User Guide</string>
    <string name="getting_started">Getting Started</string>
    <string name="five_steps">5 Steps</string>
    <string name="back_button">Back button</string>

    <!-- Steps -->
    <string name="step_1_title">Step 1: Connect to Network</string>
    <string name="step_1_subtitle">Wi-Fi or Bluetooth setup</string>

    <string name="step_2_title">Step 2: Add SmartBin</string>
    <string name="step_2_subtitle">Register your smart dustbin</string>

    <string name="step_3_title">Step 3: View Bin Status</string>
    <string name="step_3_subtitle">Monitor fill levels and activity</string>

    <string name="step_4_title">Step 4: Manage Alerts</string>
    <string name="step_4_subtitle">Set up notifications and alerts</string>

    <string name="step_5_title">Step 5: Remote Lid Control</string>
    <string name="step_5_subtitle">Control your bin remotely</string>

    <!-- Help Section -->
    <string name="need_more_help">Need More Help?</string>
    <string name="support_message">Can\'t find what you\'re looking for? Our support team is here to help you.</string>
    <string name="contact_support">Contact Support</string>
    <string name="view_faqs">View FAQs</string>

    <!-- Terms and Conditions -->
    <string name="back_Button">Back button</string>
    <string name="shield_icon">Shield icon</string>
    <string name="terms_icon">Terms icon</string>
    <string name="app_Name">Smart Dustbin</string>
    <string name="terms_subtitle">Please review and agree to continue using\nSmartDustbin.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_content_1">By using SmartDustbin, you agree to comply with and be bound by the following terms and conditions.</string>
    <string name="terms_content_2">SmartDustbin is designed to help you manage waste efficiently through smart technology. You are responsible for using the app in accordance with local waste management regulations.</string>
    <string name="terms_content_3">We reserve the right to modify these terms at any time. Continued use of the app constitutes acceptance of any changes.</string>
    <string name="agree_continue">Agree &amp; Continue</string>
    <string name="decline">Decline</string>
</resources>