<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:padding="@dimen/padding_small"
    tools:context=".view.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Vertical Guidelines -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <!-- Horizontal Guidelines -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <LinearLayout
            android:id="@+id/titleLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:paddingVertical="20dp"
                />

            <TextView
                android:id="@+id/title2_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_tiny"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title22_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/login_details"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputLinear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/titleLinear"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:paddingVertical="@dimen/margin_large"
            >

            <com.google.android.material.textfield.TextInputLayout
                app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:layout_marginBottom="@dimen/margin_default"
                app:boxStrokeColor="@color/secondary"
                app:boxStrokeWidth="2dp"
                app:boxBackgroundColor="@color/white_20"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:shapeAppearance="?attr/shapeAppearanceCornerMedium"
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:layout_marginBottom="@dimen/margin_small"
                app:boxStrokeColor="@color/secondary"
                app:boxStrokeWidth="2dp"
                app:boxBackgroundColor="@color/white_20"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword_link_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/inputLinear"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_marginTop="@dimen/margin_large"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:background="@drawable/gradient_button_bg"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_default"
                >

                <TextView
                    android:id="@+id/already_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/account_question"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:id="@+id/register_link_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/register"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_large" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
